@@ -1,3 +1,8 @@
+2006-08-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/thbrk/thbrk.c (brk_pool_delete): Adjusted code, for tiny
+	performance improvement, esp. when deleting first node.
+
 2006-08-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thbrk/tdict.txt: Manually revised word list. Removed some
@@ -984,13 +989,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.98.2.5 2006-08-25 12:10:40 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.98.2.6 2006-08-26 11:15:03 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.98.2.5 2006-08-25 12:10:40 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.98.2.6 2006-08-26 11:15:03 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
